# StickyProject

./: CMakeLists.txt
.github/workflows/: build.yaml
